--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,3 +25,6 @@ hmac = "0.7.0"
 sha2 = "0.8.0"
 digest = "0.8.0"
 walkdir = "2.2.7"
+serde = { version = "1.0.90", features = ["derive"]}
+rmp-serde = "0.13.7"
+serde_bytes = "0.11"
