Update gitlab ci
Don't output the prints from tests unless they fail

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -18,7 +18,7 @@ test:
   script:
     - rustc --version
     - cargo --version
-    - cargo test --verbose -- --nocapture
+    - cargo test --verbose
 
 build_job:
   stage: build
