--- a/Cargo.toml
+++ b/Cargo.toml
@@ -29,3 +29,5 @@ serde = { version = "1.0.90", features = ["derive"]}
 rmp-serde = "0.13.7"
 serde_bytes = "0.11"
 tempfile = "3.0.7"
+chrono = { version = "0.4", features = ["serde"] }
+
