--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,9 @@ path = "src/lib.rs"
 name = "asuran"
 path = "src/bin.rs"
 
+[features]
+profile = ["flame", "flamer"]
+
 [dependencies]
 base64 = "0.10.1"
 zstd = "0.4"
@@ -28,6 +31,11 @@ walkdir = "2.2.7"
 serde = { version = "1.0.90", features = ["derive"]}
 rmp-serde = "0.13.7"
 serde_bytes = "0.11"
-tempfile = "3.0.7"
 chrono = { version = "0.4", features = ["serde"] }
+tempfile = "3.0.7"
+flame = {version = "0.2.0", optional = true}
+flamer = {version = "0.3", optional = true}
+
+[dev-dependencies]
+quickcheck = "0.8"
 
