--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -37,5 +37,5 @@ pages:
     - mv target/doc public
     - echo '<meta http-equiv="refresh" content="0; url={{ Asuran }}">' > public/index.html
   artifacts:
-    pathts:
+    paths:
       - public
