Update gitlab ci to clean out doc target before building

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -34,6 +34,8 @@ build_job:
 pages:
   stage: doc
   script:
+    - rm -r target/doc
+    - rm -r public
     - cargo doc --no-deps
     - mv target/doc public
     - echo '<meta http-equiv="refresh" content="0; url=libasuran">' > public/index.html
