Remove binary component from library package
Removed cargo.lock from soruce control
Removed main.rs
Removed bin section from Cargo.toml

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,18 +1,10 @@
 [package]
-name = "asuran"
-description = "Deduplicating, fault tolerant archiver"
+name = "libasuran"
+description = "Deduplicating, secure archive format"
 license = "MIT"
 version = "0.0.0"
 authors = ["Nathan McCarty <nathan@mccarty.io>"]
 edition = "2018"
-
-[lib]
-name = "libasuran"
-path = "src/lib.rs"
-
-[[bin]]
-name = "asuran"
-path = "src/main.rs"
 
 [features]
 profile = ["flame", "flamer"]
