--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -26,10 +26,9 @@ build_job:
   stage: build
   script:
     - cargo build --release
-    - mv target/release/libasuran .
   artifacts:
     paths:
-      - libasuran
+      - target/release/
 
 pages:
   stage: doc
