Add readme to cargo.toml

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,7 @@ license = "MIT"
 version = "0.0.0"
 repository = "https://gitlab.asuran.rs/asuran/libasuran"
 authors = ["Nathan McCarty <nathan@mccarty.io>"]
+readme = "README.md"
 edition = "2018"
 
 [features]
