--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,7 +3,7 @@ name = "libasuran"
 description = "Deduplicating, encrypting, fast, and tamper evident archive format"
 license = "MIT"
 version = "0.0.0"
-repository = "https://gitlab.asuran.rs/asuran/libasuran"
+repository = "https://gitlab.com/asuran-rs/libasuran/"
 authors = ["Nathan McCarty <nathan@mccarty.io>"]
 readme = "README.md"
 edition = "2018"
