Switch scrypt for argon2
Switched the kdf used for deriving a key from the user key with argon2.
First steps on #19

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,7 +15,7 @@ profile = ["flame", "flamer"]
 base64 = "0.10.1"
 zstd = "0.4"
 rust-crypto = "0.2.36"
-bcrypt = "0.6"
+rust-argon2 = "0.5"
 rand = {version = "0.7", features=["small_rng"]}
 zeroize = { version  = "0.10", features = ["zeroize_derive"]}
 hmac = "0.7"
