Jankily implement parallel chunk processing.
Provided a parallel chunking implementation via Repository::write_unpacked_chunks_parallel().

This required chaning several repository signatures from &mut self to &self.

Additionally added a test and a benchmark

Janky first pass of #27

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -36,6 +36,7 @@ flame = {version = "0.2", optional = true}
 flamer = {version = "0.4", optional = true}
 blake2b_simd = "0.5"
 fastcdc = "1.0"
+rayon = "1.2.1"
 
 [dev-dependencies]
 quickcheck = "0.9"
