--- a/Cargo.toml
+++ b/Cargo.toml
@@ -37,6 +37,7 @@ flamer = {version = "0.4", optional = true}
 blake2b_simd = "0.5"
 fastcdc = "1.0"
 rayon = "1.2.1"
+futures = "0.3"
 
 [dev-dependencies]
 quickcheck = "0.9"
