--- a/Cargo.toml
+++ b/Cargo.toml
@@ -38,7 +38,10 @@ blake2b_simd = "0.5"
 fastcdc = "1.0"
 rayon = "1.2.1"
 futures = "0.3"
-anyhow = "1.0" 
+anyhow = "1.0"
+uuid = "0.8.1"
+lazy_static = "1.4.0"
+byteorder = "1.1.0"
 
 [dev-dependencies]
 quickcheck = "0.9"
