--- a/Cargo.toml
+++ b/Cargo.toml
@@ -39,9 +39,10 @@ fastcdc = "1.0"
 rayon = "1.2.1"
 futures = "0.3"
 anyhow = "1.0"
-uuid = "0.8.1"
+uuid = { version = "0.8", features = ["serde", "v4"] }
 lazy_static = "1.4.0"
 byteorder = "1.1.0"
+bincode = "1.2.0"
 
 [dev-dependencies]
 quickcheck = "0.9"
