Ease back on clippy
I thought I was ready for -D pedantic.
I was not.

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -10,7 +10,7 @@ clippy:
   stage: lint
   script:
     - rustup component add clippy
-    - cargo clippy -- -D clippy::pedantic
+    - cargo clippy -- -D warnings
   cache:
     paths:
       - target
