Fix cargo command syntax error

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -17,7 +17,7 @@ clippy:
 rustfmt:
   stage: lint
   script:
-    - cargo fmt --all --check
+    - cargo fmt --all -- --check
 
 test:
   stage: test
