--- a/Cargo.toml
+++ b/Cargo.toml
@@ -33,6 +33,7 @@ flamer = { version = "0.4.0", optional = true }
 futures = "0.3.1"
 hmac = "0.7.1"
 lazy_static = "1.4.0"
+num_cpus = "1.11.1"
 parking_lot = { version = "0.10.0", features = ["serde"] }
 rand = { version = "0.7.2", features = ["small_rng"] }
 rayon = "1.2.1"
