--- a/Cargo.toml
+++ b/Cargo.toml
@@ -30,7 +30,7 @@ digest = "0.8.1"
 fastcdc = "1.0.2"
 flame = { version = "0.2.2", optional = true }
 flamer = { version = "0.4.0", optional = true }
-futures = "0.3.1"
+futures = { version ="0.3.1", features = ["thread-pool"] }
 hmac = "0.7.1"
 lazy_static = "1.4.0"
 num_cpus = "1.11.1"
