--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -25,12 +25,17 @@ test:test:linux:
   script:
     - rustc --version
     - cargo --version
-    - cargo test --verbose
+    - cargo junit --name linux.xml
   cache:
     key: "$CI_COMMIT_REF_SLUG-test"
     paths:
       - ~/.cargo
       - target
+  artifacts:
+    paths:
+      - linux.xml
+    reports:
+      junit: linux.xml
   tags:
     - linux
 
@@ -39,12 +44,17 @@ test:test:windows:
   script:
     - rustc --version
     - cargo --version
-    - cargo test --verbose
+    - cargo junit --name windows.xml
   cache:
     key: "$CI_COMMIT_REF_SLUG-test"
     paths:
       - ~/.cargo
       - target
+  artifacts:
+    paths:
+      - windows.xml
+    reports:
+      junit: windows.xml
   tags:
     - windows
 
