--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,7 +20,7 @@ aes-ctr = "0.3.0"
 anyhow = "1.0.25"
 async-trait = "0.1.21"
 base64 = "0.11.0"
-bincode = "1.2.0"
+bincode = "1.2.1"
 blake2b_simd = "0.5.9"
 block-modes = "0.3.3"
 byteorder = "1.3.2"
@@ -29,7 +29,8 @@ digest = "0.8.1"
 fastcdc = "1.0.2"
 flame = { version = "0.2.2", optional = true }
 flamer = { version = "0.4.0", optional = true }
-futures = { version ="0.3.1", features = ["thread-pool"] }
+futures = { version = "0.3.1", features = ["thread-pool"] }
+futures-intrusive = "0.2.2"
 hmac = "0.7.1"
 lazy_static = "1.4.0"
 num_cpus = "1.11.1"
