--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,6 +18,7 @@ profile = ["flame", "flamer"]
 aes = "0.3.2"
 aes-ctr = "0.3.0"
 anyhow = "1.0.25"
+async-std = "1.4.0"
 async-trait = "0.1.21"
 base64 = "0.11.0"
 bincode = "1.2.1"
