--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,12 +17,12 @@ profile = ["flame", "flamer"]
 [dependencies]
 aes = "0.3.2"
 aes-ctr = "0.3.0"
-anyhow = "1.0.25"
+anyhow = "1.0.26"
 async-std = "1.4.0"
-async-trait = "0.1.21"
+async-trait = "0.1.22"
 base64 = "0.11.0"
 bincode = "1.2.1"
-blake2b_simd = "0.5.9"
+blake2b_simd = "0.5.10"
 block-modes = "0.3.3"
 byteorder = "1.3.2"
 chrono = { version = "0.4.10", features = ["serde"] }
@@ -37,10 +37,10 @@ lazy_static = "1.4.0"
 num_cpus = "1.11.1"
 parking_lot = { version = "0.10.0", features = ["serde"] }
 rand = { version = "0.7.2", features = ["small_rng"] }
-rayon = "1.2.1"
+rayon = "1.3.0"
 rmp-serde = "0.14.0"
-rust-argon2 = "0.6.0"
-serde = { version = "1.0.103", features = ["derive", "rc"] }
+rust-argon2 = "0.6.1"
+serde = { version = "1.0.104", features = ["derive", "rc"] }
 serde_bytes = "0.11.3"
 sha2 = "0.8.0"
 tempfile = "3.1.0"
@@ -50,10 +50,11 @@ zeroize = { version = "1.1.0", features = ["zeroize_derive"] }
 zstd = "0.5.1"
 
 [dev-dependencies]
+criterion = "0.3.0"
+dir-diff = "0.3.2"
+futures-await-test = "0.3.0"
 quickcheck = "0.9.0"
 quickcheck_macros = "0.8.0"
-dir-diff = "0.3.2"
-criterion = "0.3.0"
 
 [[bench]]
 name = "rawchunking"
