--- a/Cargo.toml
+++ b/Cargo.toml
@@ -36,6 +36,7 @@ hmac = "0.7.1"
 lazy_static = "1.4.0"
 num_cpus = "1.11.1"
 parking_lot = { version = "0.10.0", features = ["serde"] }
+petgraph = "0.5.0"
 rand = { version = "0.7.2", features = ["small_rng"] }
 rayon = "1.3.0"
 rmp-serde = "0.14.0"
