--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -127,7 +127,7 @@ build:bench:windows:
   tags:
     - windows
 
-doc:pages:
+pages:
   stage: doc
   image: "thatonelutenist/rust-nathan:latest"
   script:
