--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,6 +23,7 @@ async-trait = "0.1.22"
 base64 = "0.11.0"
 bincode = "1.2.1"
 blake2b_simd = "0.5.10"
+blake3 = "0.1.0"
 block-modes = "0.3.3"
 byteorder = "1.3.2"
 chrono = { version = "0.4.10", features = ["serde"] }
@@ -34,6 +35,7 @@ futures = { version = "0.3.1", features = ["thread-pool"] }
 futures-intrusive = "0.2.2"
 hmac = "0.7.1"
 lazy_static = "1.4.0"
+lru = "0.4.3"
 num_cpus = "1.11.1"
 parking_lot = { version = "0.10.0", features = ["serde"] }
 petgraph = "0.5.0"
@@ -43,7 +45,7 @@ rmp-serde = "0.14.0"
 rust-argon2 = "0.6.1"
 serde = { version = "1.0.104", features = ["derive", "rc"] }
 serde_bytes = "0.11.3"
-sha2 = "0.8.0"
+sha2 = "0.8.1"
 tempfile = "3.1.0"
 uuid = { version = "0.8.1", features = ["serde", "v4"] }
 walkdir = "2.2.9"
