--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,7 +2,7 @@
 name = "libasuran"
 description = "Deduplicating, encrypting, fast, and tamper evident archive format"
 license = "MIT"
-version = "0.0.3"
+version = "0.0.4"
 repository = "https://gitlab.com/asuran-rs/libasuran/"
 documentation = "https://docs.rs/crate/libasuran"
 homepage = "https://asuran.rs"
@@ -39,7 +39,7 @@ lru = "0.4.3"
 num_cpus = "1.11.1"
 parking_lot = { version = "0.10.0", features = ["serde"] }
 petgraph = "0.5.0"
-rand = { version = "0.7.2", features = ["small_rng"] }
+rand = { version = "0.7.3", features = ["small_rng"] }
 rayon = "1.3.0"
 rmp-serde = "0.14.0"
 rust-argon2 = "0.6.1"
@@ -47,8 +47,10 @@ serde = { version = "1.0.104", features = ["derive", "rc"] }
 serde_bytes = "0.11.3"
 sha2 = "0.8.1"
 tempfile = "3.1.0"
+tracing = "0.1.11"
+tracing-futures = { version = "0.2.0", features = ["futures-03"] }
 uuid = { version = "0.8.1", features = ["serde", "v4"] }
-walkdir = "2.2.9"
+walkdir = "2.3.1"
 zeroize = { version = "1.1.0", features = ["zeroize_derive"] }
 zstd = "0.5.1"
 
@@ -56,12 +58,13 @@ zstd = "0.5.1"
 criterion = "0.3.0"
 dir-diff = "0.3.2"
 futures-await-test = "0.3.0"
-quickcheck = "0.9.0"
-quickcheck_macros = "0.8.0"
+quickcheck = "0.9.1"
+quickcheck_macros = "0.9.1"
 
 [[bench]]
 name = "rawchunking"
 harness = false
+
 
 [[bench]]
 name = "chunkandstore"
