--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,7 +23,7 @@ async-trait = "0.1.22"
 base64 = "0.11.0"
 bincode = "1.2.1"
 blake2b_simd = "0.5.10"
-blake3 = "0.1.0"
+blake3 = "0.1.1"
 block-modes = "0.3.3"
 byteorder = "1.3.2"
 chrono = { version = "0.4.10", features = ["serde"] }
@@ -46,6 +46,7 @@ serde = { version = "1.0.104", features = ["derive", "rc"] }
 serde_bytes = "0.11.3"
 sha2 = "0.8.1"
 tempfile = "3.1.0"
+tokio = "0.2.9"
 tracing = "0.1.11"
 tracing-futures = { version = "0.2.0", features = ["futures-03"] }
 uuid = { version = "0.8.1", features = ["serde", "v4"] }
@@ -57,7 +58,7 @@ zstd = "0.5.1"
 criterion = "0.3.0"
 dir-diff = "0.3.2"
 futures-await-test = "0.3.0"
-quickcheck = "0.9.1"
+quickcheck = "0.9.2"
 quickcheck_macros = "0.9.1"
 
 [[bench]]
