--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,12 +18,11 @@ profile = ["flame", "flamer"]
 aes = "0.3.2"
 aes-ctr = "0.3.0"
 anyhow = "1.0.26"
-async-std = "1.4.0"
 async-trait = "0.1.22"
 base64 = "0.11.0"
 bincode = "1.2.1"
 blake2b_simd = "0.5.10"
-blake3 = "0.1.1"
+blake3 = "0.1.2"
 block-modes = "0.3.3"
 byteorder = "1.3.2"
 chrono = { version = "0.4.10", features = ["serde"] }
@@ -31,25 +30,23 @@ digest = "0.8.1"
 fastcdc = "1.0.2"
 flame = { version = "0.2.2", optional = true }
 flamer = { version = "0.4.0", optional = true }
-futures = { version = "0.3.1", features = ["thread-pool"] }
+futures = { version = "0.3.1", default-features = false, features = ["std"] }
 futures-intrusive = "0.2.2"
 hmac = "0.7.1"
 lazy_static = "1.4.0"
-lru = "0.4.3"
+lru = { version = "0.4.3", default-features = false }
 lz4 = "1.23.1"
-num_cpus = "1.11.1"
+num_cpus = "1.12.0"
 petgraph = "0.5.0"
 rand = { version = "0.7.3", features = ["small_rng"] }
-rayon = "1.3.0"
 rmp-serde = "0.14.0"
 rust-argon2 = "0.6.1"
 serde = { version = "1.0.104", features = ["derive", "rc"] }
 serde_bytes = "0.11.3"
 sha2 = "0.8.1"
-tempfile = "3.1.0"
-tokio = { version = "0.2.9", features = ["rt-core","rt-threaded", "macros"] }
-tracing = "0.1.11"
-tracing-futures = { version = "0.2.0", features = ["futures-03"] }
+tokio = { version = "0.2.9", features = ["rt-core","rt-threaded", "macros", "sync"] }
+tracing = "0.1.12"
+tracing-futures = "0.2.1"
 uuid = { version = "0.8.1", features = ["serde", "v4"] }
 walkdir = "2.3.1"
 zeroize = { version = "1.1.0", features = ["zeroize_derive"] }
@@ -61,6 +58,7 @@ dir-diff = "0.3.2"
 futures-await-test = "0.3.0"
 quickcheck = "0.9.2"
 quickcheck_macros = "0.9.1"
+tempfile = "3.1.0"
 
 [[bench]]
 name = "rawchunking"
