Add a cargo check to the kcov stage to generate the cargo.lock

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -68,6 +68,7 @@ test:coverage:
   stage: coverage
   image: "thatonelutenist/rust-nathan:latest"
   script:
+    - cargo check
     - cargo kcov
     - bash <(curl -s https://codecov.io/bash) -s target/cov
   cache:
