Implement and test SHA3
Added support for SHA3 as an HMAC backend, as well as updated the test to use it.

Effectivly closes #8. While I would like to continue adding additional supported HMAC backends, I
feel this is a good enough list for an initial release, espically considering the benefits of
blake3.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -44,6 +44,7 @@ rust-argon2 = "0.6.1"
 serde = { version = "1.0.104", features = ["derive", "rc"] }
 serde_bytes = "0.11.3"
 sha2 = "0.8.1"
+sha3 = "0.8.2"
 tokio = { version = "0.2.9", features = ["rt-core","rt-threaded", "macros", "sync"] }
 tracing = "0.1.12"
 tracing-futures = "0.2.1"
