--- a/Cargo.toml
+++ b/Cargo.toml
@@ -41,6 +41,7 @@ petgraph = "0.5.0"
 rand = { version = "0.7.3", features = ["small_rng"] }
 rmp-serde = "0.14.0"
 rust-argon2 = "0.6.1"
+rust-lzma = "0.5.1"
 serde = { version = "1.0.104", features = ["derive", "rc"] }
 serde_bytes = "0.11.3"
 sha2 = "0.8.1"
