--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,6 +25,7 @@ blake2b_simd = "0.5.10"
 blake3 = "0.1.2"
 block-modes = "0.3.3"
 byteorder = "1.3.2"
+chacha20 = "0.3.3"
 chrono = { version = "0.4.10", features = ["serde"] }
 digest = "0.8.1"
 fastcdc = "1.0.2"
