Slicer no longer handles generating chunk id
This improves seperation of concerns and allows better utilization of the pipeline.
Archive API has been updated to match and a benchmark to test archive performance has been added.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -72,6 +72,10 @@ harness = false
 name = "chunkandstore"
 harness = false
 
+[[bench]]
+name = "archive"
+harness = false
+
 [profile.bench]
 lto = true
 codegen-units = 1
