--- a/Cargo.toml
+++ b/Cargo.toml
@@ -46,7 +46,7 @@ serde = { version = "1.0.104", features = ["derive", "rc"] }
 serde_bytes = "0.11.3"
 sha2 = "0.8.1"
 sha3 = "0.8.2"
-tokio = { version = "0.2.9", features = ["rt-core","rt-threaded", "macros", "sync"] }
+tokio = { version = "0.2.9", features = ["rt-core","rt-threaded", "macros", "sync", "blocking"] }
 tracing = "0.1.12"
 tracing-futures = "0.2.1"
 uuid = { version = "0.8.1", features = ["serde", "v4"] }
