Bring in and rename binary
Added the CLI binary to the cargo workspace and renamed it asuran-cli.

--- a/asuran/Cargo.toml
+++ b/asuran/Cargo.toml
@@ -3,8 +3,8 @@ name = "asuran"
 description = "Deduplicating, encrypting, fast, and tamper evident archive format"
 license = "MIT"
 version = "0.0.4"
-repository = "https://gitlab.com/asuran-rs/libasuran/"
-documentation = "https://docs.rs/crate/libasuran"
+repository = "https://gitlab.com/asuran-rs/asuran/"
+documentation = "https://docs.rs/crate/asuran"
 homepage = "https://asuran.rs"
 authors = ["Nathan McCarty <nathan@mccarty.io>"]
 readme = "README-output.md"
