Migrate repository data structures to core crate
Created core crate for data structures that will be share between the sync and async
implementations.
Moved the chunk, compression, encryption, hmac, and key mods into the new asuran_core crate.

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -69,7 +69,11 @@ test:coverage:
   image: "thatonelutenist/rust-nathan:latest"
   script:
     - cargo check
+    - cd asuran-core
+    - cargo kcov
+    - cd ../asuran
     - cargo kcov --manifest-path asuran/Cargo.toml
+    - cd ..
     - bash <(curl -s https://codecov.io/bash) -s target/cov
   cache:
     key: "$CI_COMMIT_REF_SLUG-cov"
