Implement fastcdc with new chunker API
Reimplemented the fastcdc chunker (with tests) in the new chunker crate, hitting the new chunking
API. This implemenation performs less copying, directly reading into the main buffer

Additionally provided an error implementation for the module via thiserror.

FastCDC could still use a specialized version of of the iterator for when it is fed an AsRef<[u8]>
rather than a reader.

--- a/asuran-chunker/Cargo.toml
+++ b/asuran-chunker/Cargo.toml
@@ -10,3 +10,7 @@ authors = ["Nathan McCarty <nathan@mccarty.io>"]
 edition = "2018"
 
 [dependencies]
+fastcdc = "1.0.2"
+rand = { version = "0.7.3", features = ["small_rng"] }
+thiserror = "1.0.10"
+
