--- a/asuran/Cargo.toml
+++ b/asuran/Cargo.toml
@@ -13,6 +13,7 @@ keywords = ["encryption", "compression","deduplication","backup","archive"]
 
 [dependencies]
 anyhow = "1.0.26"
+asuran-chunker = { path = "../asuran-chunker/" }
 asuran-core = { path = "../asuran-core/" }
 async-trait = "0.1.24"
 base64 = "0.11.0"
@@ -44,11 +45,6 @@ futures-await-test = "0.3.0"
 quickcheck = "0.9.2"
 quickcheck_macros = "0.9.1"
 tempfile = "3.1.0"
-
-[[bench]]
-name = "rawchunking"
-harness = false
-
 
 [[bench]]
 name = "chunkandstore"
