Complete migration to new Chunker API
Removed the older chunker module and modified all code (including tests and benches) to hit the new
chunker API. This increases ergonomics, espically in the type signatures, by a lot.

--- a/asuran/Cargo.toml
+++ b/asuran/Cargo.toml
@@ -13,7 +13,7 @@ keywords = ["encryption", "compression","deduplication","backup","archive"]
 
 [dependencies]
 anyhow = "1.0.26"
-asuran-chunker = { path = "../asuran-chunker/" }
+asuran-chunker = { path = "../asuran-chunker/", features = ["streams"] }
 asuran-core = { path = "../asuran-core/" }
 async-trait = "0.1.24"
 base64 = "0.11.0"
