--- a/asuran-core/Cargo.toml
+++ b/asuran-core/Cargo.toml
@@ -17,17 +17,20 @@ aes-ctr = "0.3.0"
 blake2b_simd = "0.5.10"
 blake3 = "0.1.4"
 block-modes = "0.3.3"
+byteorder = "1.3.4"
 chacha20 = "0.3.3"
 hmac = "0.7.1"
 lz4 = "1.23.1"
 rand = "0.7.3"
 rmp-serde = "0.14.2"
 rust-argon2 = "0.8.0"
+semver = "0.9.0"
 serde = { version = "1.0.104", features = ["derive", "rc"] }
 serde_bytes = "0.11.3"
 sha2 = "0.8.1"
 sha3 = "0.8.2"
 thiserror = "1.0.10"
+uuid = "0.8.1"
 xz2 = "0.1.6"
 zeroize = { version = "1.1.0", features = ["zeroize_derive"] }
 zstd = "0.5.1"
