--- a/asuran-core/Cargo.toml
+++ b/asuran-core/Cargo.toml
@@ -19,6 +19,7 @@ blake3 = "0.1.4"
 block-modes = "0.3.3"
 byteorder = "1.3.4"
 chacha20 = "0.3.3"
+chrono = { version = "0.4.10", features = ["serde"] }
 hmac = "0.7.1"
 lz4 = "1.23.1"
 rand = "0.7.3"
