--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -25,7 +25,7 @@ test:lint:clippy:
   tags:
     - linux
   allow_failure: true
-  when: always
+  needs: ["test:lint:rustfmt"]
 
     
 test:test:linux:
@@ -42,7 +42,7 @@ test:test:linux:
       - target
   tags:
     - linux
-  when: always
+  needs: ["test:lint:rustfmt"]
   allow_failure: true
   artifacts:
     paths:
@@ -63,7 +63,7 @@ test:test:windows:
       - target
   tags:
     - windows
-  when: always
+  needs: ["test:lint:rustfmt"]
   allow_failure: true
   only:
     - master
@@ -176,6 +176,7 @@ pages:
     paths:
       - public
       - target
+  needs: ["test:lint:rustfmt"]
   tags:
     - linux
   when: always
