--- a/asuran-cli/Cargo.toml
+++ b/asuran-cli/Cargo.toml
@@ -23,6 +23,7 @@ tokio = { version = "0.2.11", features = ["full"] }
 tracing = "0.1.12"
 tracing-subscriber = "0.2.1"
 structopt = "0.3.9"
+async-trait = "0.1.24"
 
 [build-dependencies]
 vergen = "3.0.4"
