--- a/asuran-core/Cargo.toml
+++ b/asuran-core/Cargo.toml
@@ -12,14 +12,16 @@ description = "Core data structures used by the asuran archive format"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [features]
-default = ["core", "aes", "chacha20"]
-core = ["aes-ctr"]
+default = ["core", "aes", "chacha20", "blake2b", "sha2", "sha3"]
+core = ["aes-ctr", "blake3"]
+# Convience rename
+blake2b = ["blake2b_simd"]
 
 [dependencies]
 aes = { version = "0.3.2", optional = true }
 aes-ctr = { version = "0.3.0", optional = true }
-blake2b_simd = "0.5.10"
-blake3 = "0.2.1"
+blake2b_simd = { version = "0.5.10", optional = true }
+blake3 = { version = "0.2.1", optional = true }
 block-modes = "0.3.3"
 byteorder = "1.3.4"
 cfg-if = "0.1.10"
@@ -33,8 +35,8 @@ rust-argon2 = "0.8.1"
 semver = "0.9.0"
 serde = { version = "1.0.104", features = ["derive", "rc"] }
 serde_bytes = "0.11.3"
-sha2 = "0.8.1"
-sha3 = "0.8.2"
+sha2 = { version = "0.8.1", optional = true }
+sha3 = { version = "0.8.2", optional = true }
 stream-cipher = "0.3.2"
 thiserror = "1.0.11"
 uuid = "0.8.1"
